fixed modal header overlap

--- a/src/components/FoodOrder/Modal.module.css
+++ b/src/components/FoodOrder/Modal.module.css
@@ -8,9 +8,13 @@
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
+  z-index: 100;
 }
 
 .content {
   max-height: 95%;
   overflow: scroll;
+}
+
+.modalRoot {
 }
